--- a/CP130_HW7/CP130_HW7/CP130_HW7/CP130_HW7-Info.plist
+++ b/CP130_HW7/CP130_HW7/CP130_HW7/CP130_HW7-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>net.jsorge.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>net.jsorge.CP130-HW7</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
